fixed spacing issue
bootstrap column and wrapper div need to be separate

--- a/style.css
+++ b/style.css
@@ -1061,6 +1061,10 @@ input[type="search"]:focus {
 	float: left;
 }
 
+.home-services img {
+	float: right;
+}
+
 .home-slideshow-wrap {
 	height: 500px;
 }
@@ -1112,8 +1116,8 @@ input[type="search"]:focus {
 }
 
 .left-sidebar ul {
-	margin-left: 0;
-	text-indent: 0;
+	/*margin-left: 0;*/
+	/*text-indent: 0;*/
 }
 
 .site-content>.container {
